[gd_scene load_steps=3 format=3 uid="uid://bkgmdond4ml6f"]

[ext_resource type="Script" path="res://Scenes/UI/LevelUp.gd" id="1_l8rfa"]
[ext_resource type="Theme" uid="uid://cuis5kb05xw7j" path="res://Themes/Base.tres" id="2_11yph"]

[node name="Control" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l8rfa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 320.0
offset_bottom = 184.0
mouse_filter = 2
color = Color(0.138698, 0.386936, 0.786164, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 24.0
offset_top = 8.0
offset_right = 294.0
offset_bottom = 24.0
theme = ExtResource("2_11yph")
theme_override_font_sizes/font_size = 16
text = "LEVEL UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
visible = false
offset_left = 8.0
offset_top = 32.0
offset_right = 165.0
offset_bottom = 64.0

[node name="LevelLabel" type="Label" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_11yph")
text = "Level:"

[node name="XpLabel" type="Label" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_11yph")
text = "EXP:"

[node name="NextLevelLabel" type="Label" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_11yph")
text = "Next Level:"

[node name="StatsBox" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 96.0
offset_top = 32.0
offset_right = 224.0
offset_bottom = 144.0
theme_override_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/StatsBox"]
layout_mode = 2
columns = 2

[node name="PointsAvail" type="Label" parent="CanvasLayer/StatsBox/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_11yph")
text = "Points Available: 5"

[node name="ButtonHBox" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 120.0
offset_top = 160.0
offset_right = 208.0
offset_bottom = 176.0
alignment = 1

[node name="RerollBtn" type="Button" parent="CanvasLayer/ButtonHBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_11yph")
text = "Reroll
"

[node name="ConfirmBtn" type="Button" parent="CanvasLayer/ButtonHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_11yph")
theme_override_font_sizes/font_size = 8
text = "Next"
